# kipaco

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
kipaco/: CMakeLists.txt
kipaco/include/: ParseResult.hpp  Parser.cpp  Parser.h  Parser.hpp  exceptions.h  kipaco.h
kipaco/include/basic_parsers/: char.h  literal.h  pure.h  pure.hpp
kipaco/include/combinators/: bind.h  either.h  left_right.h  pair.h  pred.h
kipaco/src/basic_parsers/: char.cpp  literal.cpp  pure.cpp
tests/: CMakeLists.txt  basic_parsers.cpp  combinators.cpp
tests/basic_parsers/: pure.cpp
